# rechunk-zarr-ds

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  pylint.yml  test.yml
rechunk_zarr_ds/: __init__.py  main.py
rechunk_zarr_ds/utils/: __init__.py  main.py
tests/: __init__.py  test_main.py  test_utils_main.py
tests/data/json_files/: potsdam_supermarkets.json  potsdam_supermarkets_invalid.json  potsdam_supermarkets_no_geom.json  potsdam_supermarkets_point_line.json  potsdam_supermarkets_polygon.json
tests/data/zarr_files/potsdam_supermarkets.zarr/: .zarray
