[tool.poetry]
name = "rechunk-zarr-ds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
zarr = "^2.18.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.37"
pylint = "^3.3.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
